# CVB

./: .gitignore  COVERAGE.md  docker-compose.yml  id-registry.csv
EU2_Flowsheets/: README.md  pyproject.toml  vocab.env
EU2_Flowsheets/Builder/: execute-pipeline.sh
EU2_Flowsheets/Builder/sql/: create-general-concepts.sql  load-source.sql  source-ddl.sql
EU2_Flowsheets/Mappings/: CONTRIBUTING.md  atomic_enriched.csv  atomic_items.csv  atomic_review.csv  atomic_sample_200.csv  compositional_mapping.csv  flagged_enriched.csv  unmappable_items.csv
EU2_Flowsheets/fca/: README.md  __init__.py  accumulate_reviews.py  atomic_config.py  atomic_kickoff.md  atomic_template.py  build_context.py  build_mapping_csv.py  classify_concepts.py  compute_lattice.py  constants.py  enrich_atomic.py  finalize_atomic_batch.sh  fix_clinical_review.py  generate_mappings.py  name_parser.py  run_pipeline.sh  sample_atomic.py  subagent_config.py  subagent_kickoff.md  subagent_template.py  template_classifier.py  validate.py  validate_review_codes.py  value_domain_classifier.py
EU2_Flowsheets/fca/diagrams/: compositional.mmd  family.mmd  mermaid.config.json  (+3 more)
EU2_Flowsheets/raw_for_fca/: fca_context.json  fca_custom_lists.sql  fca_incidence.npz  fca_master_extract.sql  fca_validation.json  flowsheet_frequency.sql  flowsheet_frequency__v20260310.csv  template_lines.csv
apps/mapping-contributor/: README.md  app.py  apply_batch_mappings.py  apply_batch_mappings_02.py  apply_batch_mappings_03.py  apply_batch_mappings_04.py  apply_batch_mappings_05.py  pyproject.toml  requirements.txt
(+81 files in other folders)
