[project]
name = "eu2-flowsheets-fca"
version = "0.1.0"
description = "FCA-based flowsheet-to-OMOP mapping pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fca"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
